--- a/ProyectoRelampago/Web.config
+++ b/ProyectoRelampago/Web.config
@@ -4,6 +4,13 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<add name="DefaultConnection"
+			 connectionString="Server=tiusr39pl.cuc-carrera-ti.ac.cr\\MSSQLSERVER2019;DataBase=ProyectoRelampago_EJJ;User Id=ejj;Password=K3y708mf$;TrustServerCertificate=True"
+
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
+	
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
